--- a/front-server/.settings/org.eclipse.core.resources.prefs
+++ b/front-server/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,7 @@
 eclipse.preferences.version=1
 encoding//src/main/java=UTF-8
 encoding//src/main/resources=UTF-8
+encoding//src/main/webapp/label.jsp=UTF-8
 encoding//src/main/webapp/loginWarming.html=UTF-8
 encoding//src/main/webapp/old/friendlist.jsp=UTF-8
 encoding//src/main/webapp/old/index.jsp=UTF-8
